[FIX] Fixing bug on mobile with the click on board

--- a/src/assets/less/introduction.less
+++ b/src/assets/less/introduction.less
@@ -21,12 +21,6 @@
 		font-family: 'Lato-Light', sans-serif;
 		.transition(all 2s ease 2s);
 
-		& img {
-			width: 165px;
-			height: 165px;
-			margin-bottom: 30px;
-		}
-
 		& span {
 			display: block;
 
@@ -39,15 +33,6 @@
 				font-family: 'Lato-Light', sans-serif;
 				transform: rotateZ(-29deg);
 			}
-		}
-
-		& .name {
-			text-transform: uppercase;
-			letter-spacing: 2rem;
-			word-spacing: 2rem;
-			margin-left: 2rem;
-			text-shadow: 0 0 8px #bddcff;
-			.font-size(20);
 		}
 
 		& .jobs {
@@ -182,24 +167,14 @@
 			& div {
 				width: 38px;
 				height: 38px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				background: @background-bloc-0;
 				position: absolute;
 
-				& span {
-					position: absolute;
-					writing-mode: vertical-rl;
-					text-orientation: upright;
-					text-transform: uppercase;
-					min-height: 80px;
-
-					&::after {
-						content: ' ';
-						width: 1px;
-						height: 100%;
-						background: #61c3ff;
-						position: absolute;
-						top: 0;
-					}
+				& img {
+					transform: rotateZ(-45deg);
 				}
 
 				&:nth-child(1) {
@@ -262,19 +237,9 @@
 			}
 		}
 	}
-}
 
-.mounted {
-	.intro {
-		opacity: 1;
-	}
-}
-
-#HOME {
-	&.invisible {
-		& .introduction {
-			opacity: 0;
-		}
+	.mobile {
+		display: none;
 	}
 }
 
@@ -410,6 +375,74 @@
 				margin-left: 8%;
 				left: calc(50% + 55px);
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.introduction {
+		.intro {
+			display: none;
+		}
+
+		canvas {
+			display: none;
+		}
+
+		.mobile {
+			position: absolute;
+			display: block;
+			width: 100%;
+			text-align: center;
+			bottom: 50%;
+			transform: translateY(50%);
+			user-select: none;
+			color: @text-color;
+			opacity: 0;
+			font-family: 'Lato-Light', sans-serif;
+			.transition(all 2s ease 2s);
+
+			& .name {
+				text-transform: uppercase;
+				letter-spacing: 2rem;
+				word-spacing: 2rem;
+				margin-left: 2rem;
+				margin-bottom: 5rem;
+				text-shadow: 0 0 8px #bddcff;
+				.font-size(4);
+			}
+
+			& ul {
+				padding: 0;
+				margin: 0;
+
+				& .link {
+					border: 1px solid @text-color-white;
+					color: #fff;
+					box-shadow: 0 0 6px white;
+					list-style-type: none;
+					text-transform: uppercase;
+					max-width: 150px;
+					margin: 20px auto 0;
+					padding: 10px;
+					.font-size(1);
+				}
+			}
+		}
+	}
+}
+
+.mounted {
+	.mobile,
+	.intro {
+		opacity: 1;
+	}
+}
+
+#HOME {
+	&.invisible {
+		& .introduction {
+			opacity: 0;
 		}
 	}
 }
